add dataframe section to hello ltr

--- a/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
@@ -20,6 +20,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### The library: ltr \n",
+    "\n",
+    "This is a Python library, located at the top level of the repository in `hello-ltr/ltr/`. It contains helper functions used through out the notebooks.\n",
+    "\n",
+    "If you want to edit the source code, make sure you are running the Jupyter Notebook server locally and not from a Docker container."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ltr\n",
+    "import ltr.client as client\n",
+    "import ltr.index as index\n",
+    "import ltr.helpers.movies as helpers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Download some requirements\n",
     "\n",
     "Several requirements/datasets are stored in online, these include various training data sets, the data sets, and tools. You'll only need to do this once. But if you lose the data, you can repeat this command if needed."
@@ -39,10 +62,9 @@
     }
    ],
    "source": [
-    "from ltr import download\n",
-    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "corpus = 'http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
     "\n",
-    "download([corpus], dest='data/');"
+    "ltr.download([corpus], dest='data/')"
    ]
   },
   {
@@ -60,8 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.client import ElasticClient\n",
-    "client = ElasticClient()"
+    "client = client.ElasticClient()"
    ]
   },
   {
@@ -72,7 +93,7 @@
     "\n",
     "In these demos, we'll use [TheMovieDB](http://themoviedb.org) alongside some supporting assets from places like movielens.\n",
     "\n",
-    "When we reindex, we'll use `rebuild_tmdb` which deletes and recreates the index, with a few hooks to help us enrich the underlying data or modify the search engine configuration for feature engineering."
+    "When we reindex, we'll use `ltr.index.rebuild` which deletes and recreates the index, with a few hooks to help us enrich the underlying data or modify the search engine configuration for feature engineering."
    ]
   },
   {
@@ -89,11 +110,9 @@
     }
    ],
    "source": [
-    "from ltr.index import rebuild\n",
-    "from ltr.helpers.movies import indexable_movies\n",
+    "movies = helpers.indexable_movies(movies='data/tmdb.json')\n",
     "\n",
-    "movies=indexable_movies(movies='data/tmdb.json')\n",
-    "rebuild(client, index='tmdb', doc_src=movies)"
+    "index.rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
@@ -123,9 +142,18 @@
     }
    ],
    "source": [
-    "client.reset_ltr(index='tmdb')\n",
-    "\n",
-    "config = {\n",
+    "# wipes out any existing LTR models/feature sets in the tmdb index\n",
+    "client.reset_ltr(index='tmdb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A feature set as a tuple, which looks a lot like JSON\n",
+    "feature_set = {\n",
     "    \"featureset\": {\n",
     "        \"features\": [\n",
     "            {\n",
@@ -145,7 +173,17 @@
     "    }\n",
     "}\n",
     "\n",
-    "client.create_featureset(index='tmdb', name='release', ftr_config=config)"
+    "feature_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pushes the feature set to the tmdb index's LTR store (a hidden index)\n",
+    "client.create_featureset(index='tmdb', name='release', ftr_config=feature_set)"
    ]
   },
   {
@@ -155,6 +193,17 @@
     "## Is this thing on?\n",
     "\n",
     "Before we dive into all the pieces, with a real training set, we'll try out two examples of models. One that always prefers newer movies. And another that always prefers older movies. If you're curious you can opet `classic-training.txt` and `latest-training.txt` after running this to see what the training set looks like. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate some judgement data\n",
+    "\n",
+    "This will write out judgment data to a file path.\n",
+    "\n",
+    "Look at the source code in `ltr/years_as_ratings.py` to see what assumptions are being made in this synthetic judgment. What assumptions do you make in your judgment process?"
    ]
   },
   {
@@ -1184,19 +1233,68 @@
     }
    ],
    "source": [
-    "from ltr import years_as_ratings\n",
-    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.years_as_ratings import synthesize\n",
     "\n",
-    "years_as_ratings.synthesize(client, \n",
-    "                            featureSet='release',\n",
-    "                            classicTrainingSetOut='data/classic-training.txt',\n",
-    "                            latestTrainingSetOut='data/latest-training.txt')\n",
+    "synthesize(\n",
+    "    client, \n",
+    "    featureSet='release', # must match the name set in client.create_featureset(...)\n",
+    "    classicTrainingSetOut='data/classic-training.txt',\n",
+    "    latestTrainingSetOut='data/latest-training.txt'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Format the training data as two arrays of Judgement objects\n",
     "\n",
-    "# Load into training set \n",
-    "classic_training_set = [j for j in judgments_from_file(open('data/classic-training.txt'))]\n",
-    "latest_training_set = [j for j in judgments_from_file(open('data/latest-training.txt'))]\n",
+    "This step is in preparation for passing the traning data into Ranklib."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ltr.judgments as judge\n",
     "\n",
-    "classic_training_set"
+    "classic_training_set = [j for j in judge.judgments_from_file(open('data/classic-training.txt'))]\n",
+    "latest_training_set = [j for j in judge.judgments_from_file(open('data/latest-training.txt'))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Why not DataFrames?\n",
+    "\n",
+    "While Ranklib requires data in a certain format. You might want to explore the judgments and feature values as if they were DataFrames. So we have helper functions for converting them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classic_df = judge.judgments_to_df(classic_training_set)\n",
+    "classic_df = judge.judgments_df_to_long(classic_df)\n",
+    "classic_df\n",
+    "# this isn't part of the process, but useful if you want to explore the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# maybe you want to plot your features?\n",
+    "import ltr.p9_plots as plots\n",
+    "\n",
+    "plots.plot_features(classic_df)"
    ]
   },
   {
@@ -1244,8 +1342,24 @@
    ],
    "source": [
     "from ltr.ranklib import train\n",
+    "\n",
     "train(client, training_set=latest_training_set, \n",
-    "      index='tmdb', featureSet='release', modelName='latest')\n",
+    "      index='tmdb', featureSet='release', modelName='latest')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now train another model based on the 'classsic' movie judgments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train(client, training_set=classic_training_set, \n",
     "      index='tmdb', featureSet='release', modelName='classic')"
    ]
@@ -1516,11 +1630,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### See top 12 results for both models\n",
+    "\n",
+    "Looking at the `classic` model first."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-<<<<<<< HEAD
    "source": []
   },
   {
@@ -1672,182 +1794,17 @@
      "output_type": "execute_result"
     }
    ],
-=======
->>>>>>> d8b5d9a (port Ashish's score logic to Solr)
    "source": [
     "import pandas as pd\n",
     "classic_results = rdp.search(client, 'batman', 'classic')\n",
-    "print('top results from classic model:')\n",
     "pd.json_normalize(classic_results)[['id', 'title', 'release_year', 'score']].head(12)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "top results from latest model:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>release_year</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>242643</td>\n",
-       "      <td>Batman: Assault on Arkham</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>6.397139</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>251519</td>\n",
-       "      <td>Son of Batman</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>6.397139</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>382322</td>\n",
-       "      <td>Batman: The Killing Joke</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>1.371080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>209112</td>\n",
-       "      <td>Batman v Superman: Dawn of Justice</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>1.371080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>366924</td>\n",
-       "      <td>Batman: Bad Blood</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>1.371080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>324849</td>\n",
-       "      <td>The Lego Batman Movie</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>1.371054</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>321528</td>\n",
-       "      <td>Batman vs. Robin</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>1.371003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>142061</td>\n",
-       "      <td>Batman: The Dark Knight Returns, Part 2</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>0.959237</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>123025</td>\n",
-       "      <td>Batman: The Dark Knight Returns, Part 1</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>0.959237</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>69735</td>\n",
-       "      <td>Batman: Year One</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>0.959237</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>177271</td>\n",
-       "      <td>Lego Batman: The Movie - DC Super Heroes Unite</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>0.959237</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>414</td>\n",
-       "      <td>Batman Forever</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>-4.264940</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        id                                           title release_year  \\\n",
-       "0   242643                       Batman: Assault on Arkham         2014   \n",
-       "1   251519                                   Son of Batman         2014   \n",
-       "2   382322                        Batman: The Killing Joke         2016   \n",
-       "3   209112              Batman v Superman: Dawn of Justice         2016   \n",
-       "4   366924                               Batman: Bad Blood         2016   \n",
-       "5   324849                           The Lego Batman Movie         2017   \n",
-       "6   321528                                Batman vs. Robin         2015   \n",
-       "7   142061         Batman: The Dark Knight Returns, Part 2         2013   \n",
-       "8   123025         Batman: The Dark Knight Returns, Part 1         2012   \n",
-       "9    69735                                Batman: Year One         2011   \n",
-       "10  177271  Lego Batman: The Movie - DC Super Heroes Unite         2013   \n",
-       "11     414                                  Batman Forever         1995   \n",
-       "\n",
-       "       score  \n",
-       "0   6.397139  \n",
-       "1   6.397139  \n",
-       "2   1.371080  \n",
-       "3   1.371080  \n",
-       "4   1.371080  \n",
-       "5   1.371054  \n",
-       "6   1.371003  \n",
-       "7   0.959237  \n",
-       "8   0.959237  \n",
-       "9   0.959237  \n",
-       "10  0.959237  \n",
-       "11 -4.264940  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "latest_results = rdp.search(client, 'batman', 'latest')\n",
-    "print('top results from latest model:')\n",
-    "pd.json_normalize(latest_results)[['id', 'title', 'release_year', 'score']].head(12)"
+    "And then the `latest` model."
    ]
   },
   {
@@ -1855,7 +1812,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "latest_results = rdp.search(client, 'batman', 'latest')\n",
+    "pd.json_normalize(latest_results)[['id', 'title', 'release_year', 'score']].head(12)"
+   ]
   }
  ],
  "metadata": {
