--- a/notebooks/elasticsearch/tmdb/term-stat-query.ipynb
+++ b/notebooks/elasticsearch/tmdb/term-stat-query.ipynb
@@ -26,7 +26,12 @@
    "outputs": [],
    "source": [
     "from ltr.client import ElasticClient\n",
-    "client = ElasticClient()"
+    "client = ElasticClient()\n",
+    "\n",
+    "from ltr import download\n",
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "judgments='http://es-learn-to-rank.labs.o19s.com/title_judgments.txt'\n",
+    "download([corpus, judgments], dest='data/')"
    ]
   },
   {
@@ -104,7 +109,7 @@
    "outputs": [],
    "source": [
     "from ltr.log import FeatureLogger\n",
-    "from ltr.judgments import judgments_open, to_dataframe\n",
+    "from ltr.judgments import judgments_open, judgments_to_df\n",
     "from itertools import groupby\n",
     "\n",
     "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='tsq')\n",
@@ -114,7 +119,7 @@
     "                               qid=qid,\n",
     "                               keywords=judgment_list.keywords(qid))\n",
     "\n",
-    "df = to_dataframe(ftr_logger.logged)\n",
+    "df = judgments_to_df(ftr_logger.logged)\n",
     "df"
    ]
   },
@@ -185,7 +190,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -199,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
