--- a/notebooks/solr/tmdb/hello-ltr (Solr).ipynb
+++ b/notebooks/solr/tmdb/hello-ltr (Solr).ipynb
@@ -167,7 +167,7 @@
    "outputs": [],
    "source": [
     "import ltr.release_date_plot as rdp\n",
-    "rdp.plot(client, 'why does no one care')"
+    "rdp.plot(client, 'batman')"
    ]
   },
   {
