Dataframes care too

--- a/notebooks/elasticsearch/tmdb/Dataframes.ipynb
+++ b/notebooks/elasticsearch/tmdb/Dataframes.ipynb
@@ -1,13 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataframes\n",
+    "\n",
+    "Data frames are the central object of most data science workflows. This notebook shows some helper function that can assist you in creating them from judgements. The older non-dataframe way of passing data is in most of the example notebooks, so use this code anywhere you see that pattern.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ltr.judgments as judge\n",
-    "# import ltr.p9_plots as plots"
+    "import ltr.judgments as judge"
    ]
   },
   {
@@ -30,12 +38,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting\n",
+    "\n",
+    "Is one of the main reasons dataframes are easier to work with.  There are two helper functions to show the distribtion of grade (`plot_grades`) and relationship between features and grades (plot_features).\n",
+    "\n",
+    "You are encouraged to use whatever python plotting library you are most comformtable with, we have `matplotlib` and `plotnine` installed in the Docker image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classic_df_long = judge.judgments_df_to_long(classic_df)\n",
+    "import ltr.p9_plots as plots\n",
+    "plots.plot_grades(classic_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classic_df_long = judge.judgments_dataframe_to_long(classic_df)\n",
     "classic_df_long"
    ]
   },
@@ -45,7 +74,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plots.plot_features(classic_df)"
+    "plots.plot_features(classic_df_long)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plots.plot_features"
    ]
   }
  ],
