--- a/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
+++ b/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Let's map all the bits and pieces to a meatier example, to see how hello-ltr's abstractions make it easier to play with LTR via ipynbs\n",
     "\n",
-    "Genome-tags is a crowdsourced movie tagging resource project. Each movie is assigned from 0-1 how close a movie matches a tag. Luckily the tags look remarkably like search queries (ie `star trek` or `berlin`). We derrived judgments from the genome-tags data, and use them to experiment with search.\n",
+    "Genome-tags is a crowdsourced movie tagging resource project. Each movie is assigned from 0-1 how close a movie matches a tag. Luckily the tags look remarkably like search queries (ie `star trek` or `berlin`). We derived judgments from the genome-tags data, and use them to experiment with search.\n",
     "\n",
     "BUT\n",
     "\n",
