Update gonna need a bigger bot (Solr).ipynb
No validation in solr LTR

--- a/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
+++ b/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
@@ -90,8 +90,7 @@
     "\n",
     "Notice also:\n",
     "\n",
-    "- Each feature is a templated query with `{{keywords}}` parameter, that is passed at query time\n",
-    "- We've added a `validation` block, which will run these queries with the specified parameters and index and return any query errors"
+    "- Each feature is a templated query with `{{keywords}}` parameter, that is passed at query time\n"
    ]
   },
   {
