--- a/notebooks/elasticsearch/tmdb/term-stat-query.ipynb
+++ b/notebooks/elasticsearch/tmdb/term-stat-query.ipynb
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "from ltr.log import FeatureLogger\n",
-    "from ltr.judgments import judgments_open, judgments_to_df\n",
+    "from ltr.judgments import judgments_open, judgments_to_dataframe\n",
     "from itertools import groupby\n",
     "\n",
     "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='tsq')\n",
@@ -119,7 +119,7 @@
     "                               qid=qid,\n",
     "                               keywords=judgment_list.keywords(qid))\n",
     "\n",
-    "df = judgments_to_df(ftr_logger.logged)\n",
+    "df = judgments_to_dataframe(ftr_logger.logged)\n",
     "df"
    ]
   },
