Link to AI Powered Search

--- a/notebooks/elasticsearch/tmdb/bayesian-optimization.ipynb
+++ b/notebooks/elasticsearch/tmdb/bayesian-optimization.ipynb
@@ -11,7 +11,8 @@
     "Bibliography & Further reading\n",
     "\n",
     "* [Exploring Bayesian Optimization](https://distill.pub/2020/bayesian-optimization) by Apoorv Agnihotri and Nipun Batra of the Indian Institute of Technology Gandhinagar\n",
-    "* [Improving search relevance with data-driven query optimization](https://www.elastic.co/blog/improving-search-relevance-with-data-driven-query-optimization) by Josh Devins, Senior Principal Engineer, Elastic"
+    "* [Improving search relevance with data-driven query optimization](https://www.elastic.co/blog/improving-search-relevance-with-data-driven-query-optimization) by Josh Devins, Senior Principal Engineer, Elastic\n",
+    "* [AI Powered Search](http://aipoweredsearch) by Trey Grainger, Doug Turnbull, and Max Irwin. In particular chapter 12 uses Bayesian Optimization techniquest to overcome presentation bias."
    ]
   },
   {
