fix typos and bugs that got fixed while running live, but never fixed in the repo.

--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -521,7 +521,7 @@
     "            base_doc['collection_name_en'] = src_movie['belongs_to_collection']['name']\n",
     "            \n",
     "    if 'cast' in src_movie and src_movie['cast'] is not None:\n",
-    "        characters = [cast['character'] for cast in get_movie(1368)['cast']][:5]\n",
+    "        characters = [cast['character'] for cast in src_movie['cast']][:5]\n",
     "        base_doc['top_cast_en'] = characters\n",
     "    return base_doc\n",
     "\n",
@@ -791,7 +791,7 @@
     "\n",
     "for qid, query_judgments in groupby(training_set, key=lambda j: j.qid):\n",
     "    if qid == 1:\n",
-    "        model = eval_model(modelName='title',\n",
+    "        model = eval_model(modelName='title2',\n",
     "                           features=features,\n",
     "                           judgments=query_judgments)\n",
     "\n",
